Add gitRestore: reset --hard HEAD, optional clean untracked
